--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "ang-jsoneditor": "^1.8.1",
+    "angularx-social-login": "^1.2.7",
     "bootstrap": "^4.3.1",
     "firebase": "^6.3.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "jsoneditor": "^6.2.1",
     "lodash": "^4.17.13",
+    "mustache": "^3.0.1",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
