--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "JsonForm": {
+    "Angular-Json-Form": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/JsonForm",
+            "outputPath": "dist/Angular-Json-Form",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -65,18 +65,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "JsonForm:build"
+            "browserTarget": "Angular-Json-Form:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "JsonForm:build:production"
+              "browserTarget": "Angular-Json-Form:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "JsonForm:build"
+            "browserTarget": "Angular-Json-Form:build"
           }
         },
         "test": {
@@ -113,15 +113,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "JsonForm:serve"
+            "devServerTarget": "Angular-Json-Form:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "JsonForm:serve:production"
+              "devServerTarget": "Angular-Json-Form:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "JsonForm"
+  "defaultProject": "Angular-Json-Form"
 }
